# ConversaAI

./: README.md  cleanup.sh
Documents/: project_proposal.aux  project_proposal.fdb_latexmk  project_proposal.fls  project_proposal.tex  project_proposal.toc
codebase/: .gitignore  APP_README.md  ENHANCED_UI_SUMMARY.md  GEMINI_API_FIX.md  IELTS_SPEAKING_IMPLEMENTATION_SUMMARY.md  IELTS_SPEAKING_TEST_README.md  IMPLEMENTATION_SUMMARY.md  LINUX_SETUP.md  PROJECT_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  USER_GUIDE_VOICE_IELTS.md  VOICE_BASED_IELTS_FEATURES.md  WEB_SETUP_GUIDE.md  pubspec.yaml  quick_test.sh  test_gemini_api.sh
codebase/android/app/: build.gradle.kts
codebase/assets/: README.md
codebase/ios/Runner.xcodeproj/: project.pbxproj
codebase/lib/: main.dart
codebase/lib/auth/: sign_in.dart
codebase/lib/config/: app_config.dart
codebase/lib/conversaai_engine/: README.md  __main__.py  asr.py  engine.py  llm.py  pyproject.toml  tts.py
codebase/lib/models/: auth_user.dart  conversation_models.dart  ielts_models.dart  ielts_speaking_test_models.dart
codebase/lib/providers/: auth_provider.dart  ielts_provider.dart  ielts_speaking_test_provider.dart  theme_provider.dart  voice_provider.dart
codebase/lib/repositories/: auth_repository.dart
codebase/lib/screens/: home_screen.dart  ielts_exam_screen.dart  ielts_home_screen.dart  ielts_speaking_test_home_screen.dart  ielts_speaking_test_results_screen.dart  (+1 more)
codebase/linux/: CMakeLists.txt
codebase/test/: widget_test.dart
codebase/web/: index.html  manifest.json
codebase/windows/: CMakeLists.txt
(+54 files in other folders)
